crates/toon-schema/tests/compile_fail/wrong_primitive_type.stderr
error: example 1 field 'count' has wrong type; expected integer, got string
 --> tests/compile_fail/wrong_primitive_type.rs:6:8
  |
6 | struct WrongPrimitiveType {
  |        ^^^^^^^^^^^^^^^^^^
